# mcp-course

./: README.md  client.py  main.py  prime-factors-client.py  pyproject.toml  requirements.txt
my-agent/: agent-using-stdio.json  agent.json  client.py
